--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -35,4 +35,6 @@ jobs:
         run: terraform validate
 
       - name: Terraform Plan
-        run: terraform plan -input=false
+        run: terraform plan -input=false \
+          -var="ami_id=${{ secrets.AMI_ID }}" \
+          -var="key_name=${{ secrets.KEY_NAME }}"
